src/objects/Document_Line_Items__c.object
<CustomObject>
    <description>Document handling line items for cases</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document related to specific applicant.</description>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Document Line Items</relationshipLabel>
        <relationshipName>Document_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Document Line Items</relationshipLabel>
        <relationshipName>Document_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Request Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Document Line Items</relationshipLabel>
        <relationshipName>Document_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Due_Date__c</fullName>
        <formula>Case__r.Deadline_to_Submit_Documents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Insertion__c</fullName>
        <label>Document Insertion</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <description>Document status</description>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invalid_Reason_Code__c</fullName>
        <description>Reason why document submitted by applicant is Invalid</description>
        <inlineHelpText>Reason why document submitted by applicant is Invalid</inlineHelpText>
        <label>Invalid Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document is illegible</fullName>
                </value>
                <value>
                    <fullName>Wrong Document</fullName>
                </value>
                <value>
                    <fullName>Incomplete Document</fullName>
                </value>
                <value>
                    <fullName>Outdated Document</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason_Code_Description__c</fullName>
        <description>Field is required when document validity = Invalid and Invalid Reason code = Other</description>
        <inlineHelpText>Please provide details for invalid reason code</inlineHelpText>
        <label>Other Reason Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <description>Date when Document Status is changed to Valid</description>
        <inlineHelpText>Date indicates when the document was marked as Valid</inlineHelpText>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Document Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Documents_Needing_Review</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Documents Needing Review</label>
    </listViews>
    <nameField>
        <label>Document Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invalid_Reason_Code</fullName>
        <active>false</active>
        <description>If Document Status = Invalid, then Invalid Reason Code must be entered</description>
        <errorConditionFormula>ISPICKVAL(Document_Status__c, &quot;Invalid&quot;) &amp;&amp; ISPICKVAL(Invalid_Reason_Code__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Invalid_Reason_Code__c</errorDisplayField>
        <errorMessage>You must enter an Invalid Reason Code for Documents labeled Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Invalid_Reason_Description</fullName>
        <active>true</active>
        <description>If Invalid Reason Code = Other, then a description must be provided</description>
        <errorConditionFormula>ISPICKVAL(Invalid_Reason_Code__c, &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Reason_Code_Description__c )</errorConditionFormula>
        <errorDisplayField>Other_Reason_Code_Description__c</errorDisplayField>
        <errorMessage>If the invalid reason code is Other, then you must enter a description</errorMessage>
    </validationRules>
</CustomObject>